--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^3.1.0",
+    "@sanity/image-url": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "geist": "^1.3.0",
     "next": "^14.2.1",
+    "next-sanity": "^9.4.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "sharp": "^0.33.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
