--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@sanity/image-url": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "lucide-react": "^0.396.0",
     "next": "^14.2.1",
     "next-sanity": "^9.4.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
