--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.5",
     "@portabletext/react": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@sanity/image-url": "^1.0.2",
@@ -17,7 +18,7 @@
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.396.0",
-    "next": "^14.2.1",
+    "next": "^14.2.5",
     "next-sanity": "^9.4.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
